--- a/index.html
+++ b/index.html
@@ -4,28 +4,61 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Seasons</title>
+    <title>Seasons - Stream Now!</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
+    <div class="container">
+        <div class="navbar">
+            <img src="img/logo-branca-1.png" alt="logo 'Cadê o Ponto?'" width="250" class="logo">
+            <nav>
+                <ul id="menuList">
+                    <li><a href="https://soundcloud.com/lucasponto">Streaming</a></li>
+                    <li><a href="http://beacons.ai/lucasponto">Social</a></li>
+                    <li><a href="">Merch</a></li>
+                    <li><a href="">About</a></li>
+                </ul>
+            </nav>
+            <img src="img/menu.png" class="menu-icon" onclick="togglemenu()">
+        </div>
 
-        <nav>
+    <div class="row">
+        <div class="col-1">
+            <h2>Seasons</h2>
+            <h3>New Album</h3>
+            <button type="button">Stream Now</a> <img src="img/arrow.png"></button>
+        </div>
+        <div class="col-2">
+            <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay"src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1419146935&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true" class="player"></iframe>
+            <div class="color-box"></div> 
+            <div class="about">
+                <h2>Feel</h2>
+                <h2 id="the">the</h2>
+                <h2>Seasons</h2>
+            </div>   
+        </div>
+    </div>
 
-        </nav>
+    <div class="social-links">
+            <img src="img/ig.png">
+            <img src="img/tw.png">
+    </div>
 
-    </header>
+        <script>
+            var menuList = document.getElementById("menuList");
 
-    <main>
+            menuList.style.maxHeight = "0px";
 
-
-    </main>
-
-    <footer>
-
-
-    </footer>
-
+            function togglemenu() {
+                
+                if(menuList.style.maxHeight == "0px") {
+                    menuList.style.maxHeight = "130px"
+                }
+            else {
+                menuList.style.maxHeight = "0px"
+            }
+        }
+        </script>
 
 </body>
 </html>
